--- a/templates/setting.html
+++ b/templates/setting.html
@@ -42,7 +42,7 @@
             <div class="panel">
                 <div class="header">
                     <ul class="breadcrumb">
-                        <li><a href="/">主页</a><span class="divider">/</span></li>
+                        <li><a href="/topic">主页</a><span class="divider">/</span></li>
                         <li class="active">设置</li>
                     </ul>
                 </div>
