--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,10 @@
                     </div>
                 </div>
             </div>
+            {% for message in get_flashed_messages() %}
+            <span class="result">{{ message }}</span>
+            {% endfor %}
+
             <span class="result">{{ result }}</span>
             <div class="button">
                 <button type="submit" class="login-btn register-btn button">登录</button>
